--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "小红书第三方app后台",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "author": "haoye999",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.11.0"
+    "@koa/cors": "^2.2.3",
+    "axios": "^0.19.2",
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8",
+    "nodemon": "^2.0.2"
   }
 }
